# quid-notebook-lm

./: .dockerignore  .gitignore  Dockerfile  PODCAST_FIX_README.md  README.md  app.py  fix_dependencies.py  main.py  manage_collections.py  pyproject.toml  walkthrough.txt
charts/: __init__.py  chat_charts.py  podcast_charts.py  source_charts.py
components/: __init__.py  analytics_panel.py  studio_interface.py
data/: data.md  data.txt
frontend/: package-lock.json
frontend/src/: App.tsx  index.css
outputs/: podcast_script_1772058534.json  podcast_script_1772369433.json  script_1774528204.json  script_1774532111.json
quid-notebook-lm-main/: .gitignore  LICENSE  app.py  main.py  pyproject.toml  quid.db  quid_auth_api.postman_collection.json
quid-notebook-lm-main/outputs/: podcast_script_1774521884.json  script_1774527713.json  script_1774528742.json  script_1775060137.json  script_1775573604.json
quid-notebook-lm-main/quid_notebook/api/: main.py
quid-notebook-lm-main/quid_notebook/api/routers/: __init__.py  users.py
quid-notebook-lm-main/quid_notebook/core/: __init__.py  user.py
quid-notebook-lm-main/quid_notebook/services/: auth.py  user.py
quid-notebook-lm-main/quid_notebook/services/auth_client/: __init__.py
quid-notebook-lm-main/quid_notebook/services/document_processing/: doc_processor.py
quid-notebook-lm-main/quid_notebook/services/embeddings/: embedding_generator.py
quid-notebook-lm-main/quid_notebook/services/generation/: rag.py
quid-notebook-lm-main/quid_notebook/services/llm/: llm_client.py
quid-notebook-lm-main/quid_notebook/services/memory/: memory_layer.py
quid-notebook-lm-main/quid_notebook/services/web_scraping/: web_scraper.py
quid-notebook-lm-main/quid_notebook/ui/: app.py
quid-notebook-lm-main/quid_notebook/ui/charts/: podcast_charts.py  source_charts.py
quid-notebook-lm-main/quid_notebook/ui/components/: __init__.py  auth_page.py  chat_interface.py  source_list.py  upload_interface.py
quid-notebook-lm-main/quid_notebook/ui/styles/: __init__.py
quid-notebook-lm-main/scripts/: manage_collections.py
quid_notebook/api/: dependencies.py  main.py
quid_notebook/core/: __init__.py  config.py  database.py  document.py  security.py
quid_notebook/schemas/: __init__.py  chat.py  document.py  podcast.py  user.py
quid_notebook/services/: __init__.py
quid_notebook/ui/: app.py
src/audio_processing/: audio_transcriber.py  youtube_transcriber.py
tests/: notebook_pipeline.py
(+34 files in other folders)
