[project]
name = "notebook-lm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2026.2.4",
    "assemblyai>=0.44.3",
    "crewai[google-genai]>=0.193.2",
    "crewai-tools>=0.73.1",
    "fastembed>=0.7.3",
    "firecrawl-py>=4.3.6",
    "google-generativeai>=0.8.0",
    "ipykernel>=6.30.1",
    "kokoro>=0.9.4",
    "pymilvus[milvus-lite]>=2.6.2",
    "pymupdf>=1.26.4",
    "python-dotenv>=1.1.1",
    "soundfile>=0.12.1",
    "streamlit>=1.28.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "zep-cloud>=3.4.3",
    "zep-crewai>=1.1.1",
    "litellm>=1.75.3",
]
